<resources>
    <string name="app_name">Log4TS</string>

    <string name="general_error">Something went wrong :(</string>

    <string name="main_navigation_log">Log</string>
    <string name="main_navigation_report">Report</string>
    <string name="main_navigation_namespaces">Namespaces</string>
    <string name="main_navigation_projects">Projects</string>
    <string name="log_entries_log">Start</string>
    <string name="log_entries_hint">What are you doing?</string>

    <string name="register_input_email_hint">Email</string>
    <string name="register_input_username_hint">Username</string>
    <string name="register_input_password_hint">Password</string>
    <string name="register_signup_button_text">Sign Up</string>
    <string name="register_login_text">Have an account?</string>

    <string name="login_signup_text">Want to create an account?</string>
    <string name="login_button_text">Sign In</string>

    <string name="logout_button_text">Log Out</string>

    <string name="projects_create_project_button">+</string>
    <string name="projects_create_project_hint">Project Name…</string>

    <string name="log_button_log">Log</string>
    <string name="log_button_stop">Stop</string>

    <string name="log_edit_input_name_hint">Log entry name</string>
    <string name="log_edit_project_hint">Project</string>
    <string name="log_edit_submit_button">Submit</string>

    <string name="project_edit_name_hint">Project entry name</string>
    <string name="log_edit_start_datetime_hint">Start time</string>
    <string name="log_edit_end_datetime_hint">End time</string>
    <string name="log_edit_name_hint">Log Name</string>
    <string name="log_edit_screen_name">Log Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_user_to_namespace">User</string>
    <string name="apply_filters">apply filters</string>
    <string name="user_email">User email input</string>

</resources>