<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/logout_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/logout_button_text"
        app:layout_constraintBottom_toTopOf="@id/new_project_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_project_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="3dp"
        android:hint="@string/projects_create_project_hint"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toStartOf="@id/create_project_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logout_button" />

    <Button
        android:id="@+id/create_project_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/projects_create_project_button"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/new_project_input"
        app:layout_constraintTop_toBottomOf="@id/logout_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_project_button"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/item_project_list" />

</androidx.constraintlayout.widget.ConstraintLayout>