<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="20dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/back_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="24sp"
        android:textAppearance="@style/TextMedium"
        android:text="Project Detail"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/name_input_hint_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Project Detail" />

    <TextView
        android:id="@+id/name_input_hint_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Project Name"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Project Name" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_edit_name_hint"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_input_hint_text_view"
        app:layout_constraintVertical_chainStyle="packed" />


    <TextView
        android:id="@+id/email_input_hint_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="User Email"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Project Name" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input_hint_text_view"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/add_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="add user"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintEnd_toStartOf="@+id/remove_user_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/remove_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="remove user"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_user_button" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_edit_submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>